--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,11 +36,13 @@
           "namedComponents": "arrow-function"
         }
       ],
-      "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }]
+      "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
+      "react/require-default-props": "off"
     },
     "settings": {
       "import/resolver": {
         "node": {
+          "moduleDirectory": ["node_modules", "src/"],
           "extensions": [".js", ".jsx", ".ts", ".tsx", ".json", ".vue"]
         }
       }
