--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,9 @@
     },
     "plugins": ["react", "@typescript-eslint", "prettier"],
     "rules": {
+      "guard-for-in": "off",
+      "no-restricted-syntax": "off",
+      "default-param-last": "off",
       "no-shadow": "off",
       "@typescript-eslint/no-shadow": ["error"],
       "arrow-body-style": "off",
